RailsでWebサイトを作ってみよう

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
   </head>
 
   <body>
+		<%# ヘッダー・フッターなど共通で表示させるセクションを記入=>レイアウトです %>
+		<%# 全てのページに「レイアウトです」と表示される %>
+		<p>レイアウトです</p>
     <%= yield %>
   </body>
 </html>
