--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,12 +7,14 @@
       タイムライン
     </div>
   </div>
-
+ 	<%# 記事の一覧を表示 %>
+	<% @articles.each do |article| %>
   <div class="card">
     <div class="card_image">
       <%= image_tag 'eyecatch1.png' %>
     </div>
     <div class="card_content">
+			<div class="card_title"><%= article.title %></div>
       <div class="card_heart">
         <%= image_tag 'heart.svg' %>
         <span>23</span>
@@ -26,42 +28,6 @@
       </div>
     </div>
   </div>
-
-  <div class="card">
-    <div class="card_image">
-      <%= image_tag 'eyecatch2.png' %>
-    </div>
-    <div class="card_content">
-      <div class="card_heart">
-        <%= image_tag 'heart.svg' %>
-        <span>23</span>
-      </div>
-      <div class="card_detail">
-        <%= image_tag 'default-avatar.png' %>
-        <div>
-          <p>cohki0305</p>
-          <p>2020/4/16</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="card">
-    <div class="card_image">
-      <%= image_tag 'eyecatch2.png' %>
-    </div>
-    <div class="card_content">
-      <div class="card_heart">
-        <%= image_tag 'heart.svg' %>
-        <span>23</span>
-      </div>
-      <div class="card_detail">
-        <%= image_tag 'default-avatar.png' %>
-        <div>
-          <p>cohki0305</p>
-          <p>2020/4/16</p>
-        </div>
-      </div>
-    </div>
-  </div>
+	<% end %>
+ 	<%# データベース作成時に登録した記事1件とdb/seeds.rbのダミー記事：2件が表示される %>
 </div>
