--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -120,7 +120,7 @@
 }
 
 html {
-  word-spacing: px;
+  word-spacing: 1px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
