--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,6 +9,7 @@
   </div>
  	<%# 記事の一覧を表示 %>
 	<% @articles.each do |article| %>
+	<%= link_to article_path(article) do %>
   <div class="card">
     <div class="card_image">
       <%= image_tag 'eyecatch1.png' %>
@@ -28,6 +29,7 @@
       </div>
     </div>
   </div>
+	<% end %>
 	<% end %>
  	<%# データベース作成時に登録した記事1件とdb/seeds.rbのダミー記事：2件が表示される %>
 </div>
