--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,6 +7,15 @@
       <p>cohki0305</p>
       <p>2020/4/16</p>
     </div>
+		<%# 編集ボタンを追加 %>
+		<div class="article_detail_actions">
+			<div class="dropdown">
+				<%= image_tag 'actions.svg', class: 'dropbtn' %>
+				<div class="dropdown-content mini">
+					<%= link_to '編集する', edit_article_path(@article) %>
+				</div>
+			</div>
+		</div>
   </div>
   <div class="article_content">
     <%= @article.content %>
