記事の作成日を表示①

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -24,7 +24,7 @@
         <%= image_tag 'default-avatar.png' %>
         <div>
           <p>cohki0305</p>
-          <p>2020/4/16</p>
+          <p><%= I18n.l(article.created_at, format: :default) %></p> <%# 記事の作成日を表示(国際規格を設定・config/locales/ja.ymlのデフォルト設定を使用) %>
         </div>
       </div>
     </div>
