--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,8 +5,7 @@
     <%= image_tag 'default-avatar.png' %>
     <div>
       <p>cohki0305</p>
-      <p>2020/4/16</p>
-			<p><%= I18n.l(@article.created_at, format: :default) %></p> <%# 記事の作成日を表示(国際規格を設定・config/locales/ja.ymlのデフォルト設定を使用) %>
+			<p><%= @article.display_created_at %></p> <%# 記事の作成日を表示(国際規格・ja.ymlのデフォルト設定はapp/models/article.rbで実施) %>
     </div>
 		<%# 編集ボタンを追加 %>
     <div class="article_detail_actions">
