--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,11 +22,17 @@
           = link_to :back do
             = image_tag 'back.svg', class: 'header_back'
         %p.header_pageTitle BlogApp
-      .dropdown
-        = image_tag 'default-avatar.png', class: 'header_avatar dropbtn'
-        .dropdown-content
-          %a{:href => "#"} プロフィール
-          %a{:href => "#"} ログアウト
+      / ユーザー表示をサインインしている場合に限定する
+      - if user_signed_in?
+        .dropdown
+          = image_tag 'default-avatar.png', class: 'header_avatar dropbtn'
+          .dropdown-content
+            %a{:href => "#"} プロフィール
+            / ログアウト時の処理を実装
+            = link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }
+      - else
+        / ログイン時の処理を実装
+        = link_to 'ログイン', new_user_session_path, class: 'header_loginBtn'
     - if flash.present?
       .flash
         - flash.each do |key,value|
