--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -3,9 +3,8 @@
   .article_detail
     = image_tag 'default-avatar.png'
     %div
-      / (ユーザー名が存在する場合、)ユーザー名にdisplay_name:メールアドレスの@以前を表示
-      - if @article.user.present?
-        %p= @article.user.display_name
+      / ユーザー名にdisplay_name:メールアドレスの@以前を表示
+      %p= @article.user.display_name
       %p= @article.display_created_at
       / 編集・削除ボタンをログイン時＋自分が書いた記事(記事のIDがログインしているユーザーのArticlesテーブルの中に存在する場合)のみ表示させる
       - if user_signed_in? && current_user.articles.exists?(id: @article.id)
