--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -18,3 +18,9 @@
     = @article.content
   .article_heart
     = image_tag 'heart.svg'
+
+-# コメント投稿ボタンを実装
+.container
+  = link_to new_article_comment_path(@article) do
+    .btn-secondary
+      コメントを追加
