--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,7 +27,8 @@
         .dropdown
           = image_tag 'default-avatar.png', class: 'header_avatar dropbtn'
           .dropdown-content
-            %a{:href => "#"} プロフィール
+            / profileページ へ遷移 *rails/info/routesを参照
+            = link_to 'プロフィール', profile_path
             / ログアウト時の処理を実装
             = link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }
       - else
