--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -5,6 +5,24 @@
   padding: 16px 16px;
   font-weight: bold;
 }
+.header_loginBtn {
+  background-color: rgb(241, 245, 247);
+  height: 40px;
+  border-radius: 8px;
+  font-size: 12px;
+  padding: 12px 16px;
+  color: #8AC542;
+}
+.header_logos {
+  min-width: 0;
+  display: flex;
+}
+.header_logos img {
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
+  margin: 12px 8px 0;
+}
 .header_pageTitle {
   color: white;
   line-height: 40px;
@@ -14,41 +32,6 @@
   width: 40px;
   height: 40px;
   border-radius: 100%;
-}
-
-.dropbtn {
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  font-weight: normal;
-  display: none;
-  right: 0;
-  position: absolute;
-  background-color: white;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  padding: 8px 16px;
-  text-decoration: none;
-  display: block;
-  color: #616161;
-}
-
-.dropdown-content a:hover {
-  background-color: white;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
 }
 
 .tabs {
@@ -130,8 +113,14 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   position: relative;
 }
+.article h2 {
+  font-size: 16px;
+}
 .article_title {
   font-size: 22px;
+}
+.article_comment {
+  padding: 12px 0;
 }
 .article_detail {
   padding-top: 10px;
@@ -169,6 +158,16 @@
   width: 100%;
   text-align: center;
   color: white;
+  padding: 16px 0;
+  font-weight: bold;
+}
+
+.btn-secondary {
+  background-color: white;
+  border: solid 1px #8AC542;
+  width: 100%;
+  text-align: center;
+  color: #8AC542;
   padding: 16px 0;
   font-weight: bold;
 }
