--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -6,8 +6,8 @@
     .profilePage_user_basicInfo
       .profilePage_user_name
         .profilePage_user_displayName
-          = current_user.display_name
+          #{current_user.display_name}（#{current_user.birthday}・#{current_user.gender}）
         .profilePage_user_actionButton
           = link_to 'Edit', edit_profile_path # /profile/editへ遷移 *rails/info/routesを参照
       .profilePage_user_introduction
-        テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+        = current_user.introduction
