--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -6,8 +6,10 @@
     .profilePage_user_basicInfo
       .profilePage_user_name
         .profilePage_user_displayName
-          #{current_user.display_name}（#{current_user.birthday}・#{current_user.gender}）
+          #{current_user.display_name}（#{current_user.age}・#{current_user.gender}）
+          / 現在ログインしているユーザーのニックネーム（年齢・性別）を表示
         .profilePage_user_actionButton
           = link_to 'Edit', edit_profile_path # /profile/editへ遷移 *rails/info/routesを参照
       .profilePage_user_introduction
         = current_user.introduction
+        / 現在ログインしているユーザーの紹介文を表示
