--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -6,7 +6,7 @@
     .profilePage_user_basicInfo
       .profilePage_user_name
         .profilePage_user_displayName
-          #{current_user.display_name}（#{current_user.age}・#{current_user.gender}）
+          #{current_user.display_name}（#{current_user.age}・#{I18n.t("enum.genders.#{current_user.gender}")}）
           / 現在ログインしているユーザーのニックネーム（年齢・性別）を表示
         .profilePage_user_actionButton
           = link_to 'Edit', edit_profile_path # /profile/editへ遷移 *rails/info/routesを参照
