画像アップロードと表示機能を実装

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,7 +1,7 @@
 .article
   %h1.article_title= @article.title
   .article_detail
-    = image_tag 'default-avatar.png'
+    = image_tag @article.user.avatar_image  # 記事を作成したユーザーのアバター画像を設定
     %div
       / ユーザー名にdisplay_name:メールアドレスの@以前を表示
       %p= @article.user.display_name
