--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -5,6 +5,11 @@
       %li= message
 
   = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
+    / 画像をアップロードするためのフォームを追加
+    %div
+    = f.label :avatar, 'アバター'
+    %div
+      = f.file_field :avatar
     %div
       = f.label :nickname, 'ハンドルネーム'
     %div
