--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -8,7 +8,7 @@
         = image_tag 'heart.svg'
         %span 23
       .card_detail
-        = image_tag 'default-avatar.png'
+        = image_tag article.user.avatar_image # 記事を作成したユーザーのアバター画像を設定
         %div
           %p= article.user.display_name
           %p= article.display_created_at
