--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -16,8 +16,16 @@
               = link_to '削除する', article_path(@article), data: { turbo_method: 'delete', turbo_confirm: '本当に削除してもよろしいですか？' }
   .article_content
     = @article.content
-  .article_heart
-    = image_tag 'heart.svg'
+  - if user_signed_in? # ログインしている場合のみマークを表示・未ログインの場合はいいねできないため非表示
+    - if current_user.has_liked?(@article)  # いいねがあれば、heart-active.svgを表示
+      .article_heart
+        = link_to article_like_path(@article), data: { turbo_method: 'delete' } do
+          = image_tag 'heart-active.svg'
+    - else # いいねがなければ、POSTメソッドでいいねを投稿＋heart.svgを表示
+      .article_heart
+        = link_to article_like_path(@article), data: { turbo_method: 'post' } do
+          = image_tag 'heart.svg'Like
+          -# article_like_path(@article)(*/rails/info/routesを参照)で対象の記事IDにいいねをポストする、デフォルトのGETメソッドをPOSTメソッドに変更
 
 -# コメント一覧を表示
 .article
