--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -1,7 +1,8 @@
 = link_to article_path(article) do
   .card
-    .card_image
-      = image_tag 'eyecatch1.png'
+    - if article.eyecatch.attached? # アイキャッチがアップロードされた場合のみ、画像を表示
+      .card_image
+        = image_tag article.eyecatch
     .card_content
       .card_title= article.title
       .card_heart
