--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,9 @@
         - if !current_page?(root_path)
           = link_to :back do
             = image_tag 'back.svg', class: 'header_back'
-        %p.header_pageTitle BlogApp
+        / ヘッダーロゴの遷移先をルートに設定
+        %p.header_pageTitle
+          = link_to 'BlogApp', root_path
       / ユーザー表示をサインインしている場合に限定する
       - if user_signed_in?
         .dropdown
