--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,9 @@
 @import 'common';
 @import 'profile';
 
+@import "trix";
+@import "actiontext";
+
 html {
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
