--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -10,12 +10,12 @@ $back-icon-size: 16px;
   background-color: $primary-color;
   padding: $header-padding-y 16px;
   font-weight: bold;
-	
+
   a {
     color: white;
   }
 
-	&_loginBtn {
+	a.header_loginBtn {
     background-color: $base-bg-color;
     height: $avatar-size;
     border-radius: 8px;
