タイムラインページの実装

--- a/app/views/commons/_profile.html.haml
+++ b/app/views/commons/_profile.html.haml
@@ -23,4 +23,4 @@
         = user.profile&.introduction
 
   - user.articles.each do |article|
-    = render 'articles/article', article: article
+    = render 'commons/article', article: article
