--- a/app/views/commons/_tabs.html.haml
+++ b/app/views/commons/_tabs.html.haml
@@ -1,6 +1,6 @@
 .tabs
-  -# 現在のページのルートパスの設定に合わせてactiveクラスを付与
-  .tabs_item{class: "#{'active' if current_page?(root_path)}"}
+  -# app/helpers/tabs_helper.rbのadd_active_classを使用して、ページごとにactiveクラスを付与
+  .tabs_item{class: "#{add_active_class(root_path)}"}
     = link_to '新着記事一覧', root_path
-  .tabs_item{class: "#{'active' if current_page?(timeline_path)}"}
+  .tabs_item{class: "#{add_active_class(timeline_path)}"}
     = link_to 'タイムライン', timeline_path
